# tanuki

./: .gitignore  Cargo.toml  README.md
design/: goals.md
src/: lib.rs
src/table/: mod.rs
